--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -61,6 +62,23 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </footer>
       </form>
+    </section>
+    <section class="tweet-container">
+      <article>
+        <header>
+          <span>Name</span>
+          <span>Handle</span>
+        </header>
+        <div class="content">content belongs to this and I am going to keep on typing until I am certain that it can contain my texts in the proper amount of space so that they are c...</div>
+        <footer>
+          <span>timestamp</span>
+          <div class="icons">
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-retweet"></i>
+            <i class="fa-solid fa-heart"></i>
+          </div>
+        </footer>
+      </article>
     </section>
   </main>
 </body>
