Add post without reload.

--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,7 @@
         </footer>
       </form>
     </section>
-    <section id="tweets-container">
-    </section>
+    <section id="tweets-container"></section>
   </main>
 </body>
 
