--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
+      <div class="error"></div>
       <form method="POST" action="/tweets">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text" rows="1"></textarea>
