Refactor post tweet readability, and add button to nav.

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,9 @@
     <span>tweeter</span>
     <div>
       <text><b>Write</b> a new tweet</text>
-      <i class="fa-solid fa-angles-down"></i>
+      <button>
+        <i class="fa-solid fa-angles-down"></i>
+      </button>
     </div>
   </nav>
   <header>
