--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/jump.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -47,6 +48,9 @@
     </div>
   </header>
   <!-- Page-specific (main) content here -->
+  <button id="jump">
+    <i class="fa-solid fa-angles-up"></i>
+  </button>
   <main class="container">
     <section class="new-tweet">
       <div class="error"></div>
@@ -66,5 +70,6 @@
   <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   <script type="text/javascript" src="/scripts/post-tweet.js"></script>
+  <script type="text/javascript" src="/scripts/jump.js"></script>
 </body>
 </html>
