--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/jump.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/media.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -44,7 +45,7 @@
       <img src="/images/profile-hex.png">
     </div>
     <div>
-      <h2>Your Name</h2>
+      <h3>Your Name</h3>
     </div>
   </header>
   <!-- Page-specific (main) content here -->
