--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
   <link rel="stylesheet" href="/styles/jump.css" type="text/css" />
   <link rel="stylesheet" href="/styles/media.css" type="text/css" />
 
