Refactor scss for readability

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       <i class="fa-solid fa-angles-down"></i>
     </button>
   </nav>
-  <header>
+  <header id="profile">
     <img src="/images/profile-hex.png">
     <h3>Your Name</h3>
   </header>
