--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
   </button>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
   <script type="text/javascript" src="/scripts/client.js"></script>
+  <script type="text/javascript" src="/scripts/postNewTweet.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   <script type="text/javascript" src="/scripts/toggle-form.js"></script>
   <script type="text/javascript" src="/scripts/jump.js"></script>
